appId: com.example.spareseat
---
# "Legendary Arena" has 1 event: Clash Royale Tournament
- launchApp:
    clearState: true
- tapOn: "Get Started"
- tapOn:
    id: "tilEmail"
- inputText: "bigydot@gmail.com"
- tapOn:
    id: "tilPassword"
- inputText: "123456aA"
- tapOn: "Sign In"
- extendedWaitUntil:
    visible: "Hi, Big Dot!"
    timeout: 10000
- extendedWaitUntil:
    visible: "View Details →"
    timeout: 10000
- tapOn:
    id: "actvLocation"
- tapOn: "Legendary Arena"
- assertVisible: "Clash Royale Tournament"
